Covering dropdown arrow in IE fix

--- a/all-ie-only.css
+++ b/all-ie-only.css
@@ -6,8 +6,8 @@ div:before {
     display: block;
 	position: absolute;
 	content: '';
-	left: 295px;
-	top:471px;
+	left: 324px;
+	top:429px;
 	height: 32px;
 	width: 20px;
 	margin: 3px;
@@ -19,8 +19,8 @@ div:after {
     display: block;
 	position: absolute;
 	content: '';
-	left: 150px;
-	top:471px;
+	left: 165px;
+	top:429px;
 	height: 32px;
 	width: 20px;
 	margin: 3px;
